# scrapfu

./: .gitignore  README.md  equipment_log.txt  log.txt  main.py  monster.py  pyproject.toml  scraper.py  settings.py  sonar-project.properties
helpers/: db.py  driver.py
migrations/: env.py
migrations/versions/: 12a4779586cb_replace_min_max_with_ranges_in_weapon.py  3e32f9fec408_realace_min_max_with_ranges_in_mosnter.py  41c9a9eb1a50_remove_missed_neutral_steal_from_weapons.py  4a8656fa0788_added_equipment_recipe_and_weapon_tables.py  4c3f53f3a9c7_add_crit_hit_bonus_and_conditions_field_.py  5b08239ecb0e_added_vitality_column_to_equipment_table.py  6878867232a1_realace_min_max_with_ranges_in_equipment.py  90c90f5ac0bc_crit_hit_bonus_on_weapon_table_can_be_.py  97fae0e5221f_add_summon_column_and_element_steal_to_.py  a51d5e6498be_add_monster_table.py  b0e7ad8fc281_add_user_per_turn_column_to_weapon_add_.py  ca4dd2fabf90_add_consumable_table.py  d11a6d16aa57_added_resource_table_and_monster_.py
models/: accessory.py  associationtables.py  base.py  consumable.py  equipment.py  ingredient.py  monster.py  monsteraccessory.py  monsterequipment.py  monsterharvest.py  monsterresource.py  monsterweapon.py  mrassociation.py  profession.py  recipe.py  resource.py  weapon.py
scrapers/: accessoryscraper.py  consumablescraper.py  equipmentscraper.py  monsterharvestscraper.py  monsterscraper.py  professionscraper.py  resourcescraper.py  scraper.py  weaponscraper.py
